// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MSessionExpired should render correctly 1`] = `
<div>
    <m-message state="information">
        <m-i18n k="m-session-expired:message"></m-i18n>
    </m-message>
    <p>
        <m-i18n k="m-session-expired:directions-1"></m-i18n>
    </p>
    <p>
        <m-i18n k="m-session-expired:directions-2"></m-i18n>
    </p>
    <p></p>
    <m-link mode="link">
        m-session-expired:back-to-portal
    </m-link>
</div>
`;

exports[`MSessionExpired should render correctly with back-to-label override 1`] = `
<div>
    <m-message state="information">
        <m-i18n k="m-session-expired:message"></m-i18n>
    </m-message>
    <p>
        <m-i18n k="m-session-expired:directions-1"></m-i18n>
    </p>
    <p>
        <m-i18n k="m-session-expired:directions-2"></m-i18n>
    </p>
    <p></p>
    <m-link mode="link">
        Some back to label
    </m-link>
</div>
`;
